(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-only)

(authors "Alina Shlegel")

(maintainers "https://github.com/shlegelal")

(bug_reports "https://github.com/shlegelal/fp2021")

(homepage "https://github.com/shlegelal/fp2021")

(package
 (name asm) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for asm")
 (description
  "Real assembler interpreter. With support for some SIMD operations, such as vector and matrix multiplication")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_expect
  ppx_show
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
