(executable
 (name demoAO)
 (modules demoAO)
 (public_name demoAO)
 (libraries asm_lib))

(executable
 (name demoNO)
 (modules demoNO)
 (public_name demoNO)
 (libraries asm_lib))

(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries asm_lib stdio))

(cram
 (deps ./demoNO.exe ./demoAO.exe ./demoParse.exe))
